--- a/src/app/pengaduan/pengaduan.page.html
+++ b/src/app/pengaduan/pengaduan.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tagihan</ion-title>
+    <ion-title>pengaduan</ion-title>
   </ion-toolbar>
 </ion-header>
 
