--- a/src/app/pengaturan/pengaturan.page.html
+++ b/src/app/pengaturan/pengaturan.page.html
@@ -1,9 +1,28 @@
-<ion-header>
+<ion-header padding no-border>
   <ion-toolbar>
     <ion-title>pengaturan</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h3>Ganti Password</h3>
+      </ion-label>
+      <ion-icon name="play-outline"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h3>Tentang</h3>
+      </ion-label>
+      <ion-icon name="play-outline"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h3>Logout</h3>
+      </ion-label>
+      <ion-icon name="play-outline"></ion-icon>
+    </ion-item>
+</ion-list>
 </ion-content>
