--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -1,9 +1,41 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar no-border >
     <ion-title>profil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+  <ion-card>
+    <ion-card-header>
+      <ion-img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FMark_Zuckerberg&psig=AOvVaw17ASEGQQrqUiUgtwLjTTh8&ust=1595393130437000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCICjwdrE3eoCFQAAAAAdAAAAABAD"></ion-img>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>No. Internet</ion-card-title>
+          <ion-card-subtitle>8172937192182</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Nama</ion-card-title>
+          <ion-card-subtitle>Ade kurniawan</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>No. HP</ion-card-title>
+          <ion-card-subtitle>088888888888</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Alamat</ion-card-title>
+          <ion-card-subtitle>Tegal</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
