--- a/src/app/tab/tab.page.html
+++ b/src/app/tab/tab.page.html
@@ -11,14 +11,19 @@
         <ion-label>Profil</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="tagihan">
+      <!-- <ion-tab-button tab="tagihan">
         <ion-icon name="wallet-outline"></ion-icon>
         <ion-label>Tagihan</ion-label>
+      </ion-tab-button> -->
+
+      <ion-tab-button tab="pengaduan">
+        <ion-icon name="mail-outline"></ion-icon>
+        <ion-label>Pengaduan</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="pengaturan">
         <ion-icon name="settings-outline"></ion-icon>
-        <ion-label>Tagihan</ion-label>
+        <ion-label>Pengaturan</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
